# agent_llm_rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
scripts/: gunicorn-entrypoint.sh
src/chatapp/: main.py
src/chatapp/infra/: embrapa_api.py  load_llm.py
src/chatapp/models/: constants.py  pg_engine.py  vector_stores.py
src/chatapp/schemas/: agrofit.py  chat_types.py
src/chatapp/services/: answer.py  build_documents.py  index.py  lexical_retriever.py  rag_pipeline.py  rerank.py  retriever.py  serializers.py  text_splitter.py  vector_retriever.py
src/chatapp/utils/: prompts.py
tests/: test_services.py
